--- a/tests/contracts.hpp.in
+++ b/tests/contracts.hpp.in
@@ -31,6 +31,10 @@ struct contracts {
    static std::vector<uint8_t> eosio_arb_wasm() { return read_wasm("${CMAKE_BINARY_DIR}/../eosio.arbitration/eosio.arbitration.wasm"); }
    static std::string          eosio_arb_wast() { return read_wast("${CMAKE_BINARY_DIR}/../eosio.arbitration/eosio.arbitration.wast"); }
    static std::vector<char>    eosio_arb_abi() { return read_abi("${CMAKE_BINARY_DIR}/../eosio.arbitration/eosio.arbitration.abi"); }
+   static std::vector<uint8_t> fox_protocol_wasm() { return read_wasm("${CMAKE_BINARY_DIR}/../fox.protocol/fox.protocol.wasm"); }
+   static std::vector<char>    fox_protocol_abi() { return read_abi("${CMAKE_BINARY_DIR}/../fox.protocol/fox.protocol.abi"); }
+   static std::vector<uint8_t> fox_token_wasm() { return read_wasm("${CMAKE_BINARY_DIR}/../fox.token/fox.token.wasm"); }
+   static std::vector<char>    fox_token_abi() { return read_abi("${CMAKE_BINARY_DIR}/../fox.token/fox.token.abi"); }
 
    struct util {
       static std::vector<uint8_t> test_api_wasm() { return read_wasm("${CMAKE_SOURCE_DIR}/test_contracts/test_api.wasm"); }
