--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ add_subdirectory(eosio.saving)
 add_subdirectory(telos.tfvt)
 add_subdirectory(telos.free)
 add_subdirectory(token.registry)
+add_subdirectory(telos.snaps)
 
 
 if (APPLE)
