trail generic initial spec

--- a/contracts/CMakeLists.txt
+++ b/contracts/CMakeLists.txt
@@ -18,3 +18,5 @@ add_subdirectory(eosio.saving)
 add_subdirectory(telos.tfvt)
 add_subdirectory(telos.free)
 add_subdirectory(token.registry)
+
+add_subdirectory(trail)
