--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,8 @@
 cmake_minimum_required( VERSION 3.5 )
 
-set(EOSIO_VERSION_MIN "1.4")
-set(EOSIO_VERSION_SOFT_MAX "1.4")
+set(EOSIO_VERSION_MIN "1.6")
+set(EOSIO_VERSION_SOFT_MAX "1.6")
+set(MY_LIB_DIR "/Users/mwilliams/Projects/eos/libraries")
 #set(EOSIO_VERSION_HARD_MAX "")
 
 find_package(eosio)
@@ -13,20 +14,20 @@ EOSIO_CHECK_VERSION(VERSION_OUTPUT "${EOSIO_VERSION}"
                                    "${EOSIO_VERSION_SOFT_MAX}"
                                    "${EOSIO_VERSION_HARD_MAX}"
                                    VERSION_MATCH_ERROR_MSG)
-if(VERSION_OUTPUT STREQUAL "MATCH")
-   message(STATUS "Using eosio version ${EOSIO_VERSION}")
-elseif(VERSION_OUTPUT STREQUAL "WARN")
-   message(WARNING "Using eosio version ${EOSIO_VERSION} even though it exceeds the maximum supported version of ${EOSIO_VERSION_SOFT_MAX}; continuing with configuration, however build may fail.\nIt is recommended to use eosio version ${EOSIO_VERSION_SOFT_MAX}.x")
-else() # INVALID OR MISMATCH
-   message(FATAL_ERROR "Found eosio version ${EOSIO_VERSION} but it does not satisfy version requirements: ${VERSION_MATCH_ERROR_MSG}\nPlease use eosio version ${EOSIO_VERSION_SOFT_MAX}.x")
-endif(VERSION_OUTPUT STREQUAL "MATCH")
+
 
 
 enable_testing()
 
+#include(${MY_LIB_DIR}/softfloat/source/include/softfloat.hpp)
+
+include_directories(${CMAKE_SOURCE_DIR}/libraries/softfloat/source)
+
 configure_file(${CMAKE_SOURCE_DIR}/contracts.hpp.in ${CMAKE_BINARY_DIR}/contracts.hpp)
 
 include_directories(${CMAKE_BINARY_DIR})
+
+#FIND_PATH(MY_LIB_DIR softfloat.hpp "./include" DOC "Freetype includes")
 
 file(GLOB UNIT_TESTS "*.cpp" "*.hpp")
 
